<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mixare</string>
    <string name="search_hint">Search Location</string>
    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>
    <string name="OSM">OpenStreetMap</string>
    <string name="MIXARE">Mixare</string>
    <string name="TWITTER">Twitter</string>
    <string name="PANORAMIO">Panoramio</string>
    <string name="WIKIPEDIA">Wikipedia</string>
    <string name="ARENA">Arena</string>
    <string name="CIRCLE_MARKER">Circles</string>
    <string name="NAVIGATION_MARKER">Arrows</string>
    <string name="IMAGE_MARKER">Images</string>
	<string name="OPENGL_MARKER">3D object</string>
	<string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>
	<string name="option_not_available">Sorry, We are working on it&#8230; \nThis option will be available soon!</string>
	<string name="license_text">Copyright &#169; 2010-2013 Peer internet solutions, changes &#169; 2015-2016 @MelanieWe, @pokerazor
		\n\nThis program is free software: 	you can redistribute it and/or modify it under the terms of the 
		GNU General Public License as published by the Free Software Foundation, either version 3 of the License, 
		or at your option) any later version. 
		\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even 
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public 
		License for more details. 
		\n\n You should have received a copy of the GNU General Public License along with this program. 
		If not, see &lt;http://www.gnu.org/licenses/&gt;
	</string>
	<string name="launch_plugins">Launch plugins?</string>
	<string name="plugin_message">Some plugins have changed, do you want to see the List of Plugins?</string>
	<string name="remember_this_decision">Remember this decision</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="pref_item_datasources_title">Data Sources</string>
	<string name="pref_item_plugins_title">Plugins</string>
	<string name="menu_item_list">Marker List</string>
	<string name="menu_item_map">Map</string>
	<string name="menu_item_range">Range</string>
	<string name="menu_item_search">Search</string>
	<string name="menu_item_info">Info</string>
	<string name="pref_item_license_title">License</string>
	<string name="cancel">Cancel</string>
	<string name="data_source_edit_err">This data source cannot be edited.</string>
	<string name="data_source_delete_err">This data source cannot be deleted.</string>
	<string name="connection_error_dialog">Sorry, a connection Error occurred! \nPlease check if you are connected to the Internet.</string>
	<string name="gps_error_dialog">GPS ERROR</string>
	<string name="unsupportet_hardware_dialog">Mixare had a problem with finding the matching sensors. Make sure your phone has the needed sensors.</string>
	<string name="general_error_dialog">Mixare had a problem. Please report this error.</string>
	<string name="connection_error_dialog_button1">Retry</string>
	<string name="connection_error_dialog_button2">Open Settings</string>
	<string name="connection_error_dialog_button3">Close App</string>
	<string name="connection_GPS_dialog_text">The GPS location can not be updated&#8230; \nIf you continue it could be that the Information 
		\nwill not be displayed in the right place.</string>
	<string name="connection_GPS_dialog_button1">Continue</string>
	<string name="connection_GPS_dialog_button2">Close</string>
	<string name="no_website_available">Sorry, there is no further \ninformation available.</string>
	<string name="pref_item_license_dialogtitle">License</string>
	<string name="close_button">Close</string>
	<string name="general_info_title">General Information</string>
	<string name="general_info_text">GPS info: </string>
	<string name="longitude">Longitude: </string>
	<string name="latitude">Latitude: </string>
	<string name="altitude">Altitude: </string>
	<string name="speed">Speed: </string>
	<string name="accuracy">Accuracy: </string>
	<string name="gps_last_fix">Last GPS fix: </string>
	<string name="map_menu_normal_mode">Map</string>
	<string name="map_menu_satellite_mode">Satellite</string>
	<string name="map_menu_map_osm">OpenStreetMap</string>
	<string name="map_menu_cam_mode">Camera</string>
	<string name="map_my_location">My Location</string>
	<string name="map_toggle_path_on">Show Path</string>
	<string name="map_toggle_path_off">Hide Path</string>
	<string name="map_current_location_click">Your current location</string>
	<string name="data_source_add">Add data source</string>
	<string name="data_source_edit">Edit data source</string>
	<string name="data_source_delete">Delete data source</string>
	<string name="data_source_change_wikipedia">Changed to Wikipedia as data source</string>
	<string name="data_source_change_twitter">Changed to Twitter as data source</string>
	<string name="data_source_change_osm">Changed to OpenStreetMap as data source</string>
	<string name="search_failed_notification">No search results</string>
	<string name="source_openstreetmap">Stations around</string>
	<string name="search_active_1">Search on data source</string>
	<string name="search_active_2">. Touch to terminate search</string>
	<string name="download_error">Error while downloading</string>
	<string name="download_received">Received data from</string>
	<string name="add_osm_menu">Add OpenStreetMap URL</string>
	<string name="insert_osm_url">Insert OpenStreetMap URL</string>
	<string name="osm_max_object_menu">Set max POI per URL</string>
	<string name="set_osm_max_object">Maximum POIs per URL</string>
	<string name="location_not_found">Location not found, make sure you enabled Wifi location or GPS in the settings.</string>
	<string name="refreshing">Refreshing</string>
	<string name="select_plugin">Find new Plugins</string>
	<string name="plugins_changed">Activation of Plugins changed. Mixare has to restart to change plugins. Would you like to do that now?</string>
	<string name="select_all">Select all</string>
	<string name="deselect_all">Deselect all</string>
	<string name="reload_plugins">Reload Plugins</string>
	<string name="plugin_type_splashscreen">Splashscreen</string>
	<string name="plugin_type_bootstrap">Bootstrap</string>
	<string name="plugin_type_marker">Marker</string>
	<string name="plugin_type_dataselector">Dataselector</string>
	<string name="plugin_type_datahandler">Datahandler</string>
	<string name="list_view_total_markers">Total markers: </string>
	<string name="list_view_marker_in_section">Markers: %1$d</string>
	<string name="list_view_search_no_result">No result found</string>
	<string name="list_view_no_plugins_available">No plugins installed</string>
	<string name="list_view_search_hint">Search</string>
	<string name="add_datasource">Add Datasource</string>
	<string name="datasource_list">Datasources</string>
	<string name="plugin_list">Plugins</string>
	<string name="mix_list_view">Markerlist</string>
	<string name="list_view_section" translatable="false">list_view_section</string>
	<string name="list_view_entry" translatable="false">list_view_entry</string>
	<string name="list_view_webview_id" translatable="false">list_view_webview_id</string>
	<string name="none">None</string>
	<string name="add_random">Add Random Distance</string>
	<string name="truncate">Truncate GPS location</string>
	<string name="problem_detected">problem detected</string>
	<string name="positionStatusText">(%1$s, %2$.0f) %3$s: %4$.4f, %5$.4f, %6$.0fm</string>
	<string name="dataSourcesStatusText">Data Sources </string>
	<string name="sensorsStatusText">Sensor status</string>
	<string name="pref_rangeBarProgress" translatable="false">rangeBarProgress</string>
	<string name="drawer_open" />
	<string name="drawer_close" />
	<string name="menu_item_3drendering">3D Rendering</string>
	<string name="menu_item_route">Route To…</string>
	<string name="dataSourcesStatusPlaceholder" tools:ignore="TypographyFractions">Data Sources: (5 min) 3/4</string>
	<string name="sensorsStatusTextPlaceholder">Sensors: Problems with vector sensor</string>
	<string name="destinationStatusTextPlaceholder">destinationStatusPlaceholder</string>
	<string name="select_destination">Select Destination</string>
	<string name="distance_format">%1$.0fm</string>
	<string name="marker_action_start_routing">Start routing</string>
	<string name="marker_action_show_on_map">Show on map</string>
	<string name="marker_action_set_as_location">Set as location</string>
	<string name="marker_action_set_as_destination">Set as destination</string>
	<string name="marker_action_show_details">Show details</string>
	<string name="marker_action_show_image">Show image</string>
	<string name="marker_action_show_website">Show website</string>
	<string name="marker_action_show_website_externally">Show website externally</string>
	<string name="pref_cat_data_title">Data</string>
	<string name="pref_cat_info_title">Info</string>
	<string name="pref_item_datasources_summary">Select, which datasources should be queried and displayed</string>
	<string name="pref_item_plugins_summary">Select, which PlugIns should be active</string>
	<string name="pref_item_license_key" translatable="false">prefItemLicenseKey</string>
	<string name="pref_item_license_summary">Display license text</string>
	<string name="pref_item_datasources_key" translatable="false">prefItemDatasourcesKey</string>
	<string name="pref_item_plugins_key" translatable="false">prefItemPluginsKey</string>
	<string name="menu_item_settings">Settings</string>
	<string name="pref_item_firstacess_key" translatable="false">firstAccess</string>
	<string name="pref_item_firstacess_title">First access</string>
	<string name="pref_item_firstacess_summary">Act as if app was executed first time</string>
	<string name="pref_item_routing_key" translatable="false">prefRouting</string>
	<string name="pref_item_routing_title">Enable routing</string>
	<string name="pref_item_markertext_key" translatable="false">drawMarkerText</string>
	<string name="pref_item_markertext_title">Render text on markers</string>
	<string name="pref_item_usehud_key" translatable="false">useHUD</string>
	<string name="pref_item_usehud_title">Render HUD</string>
    <string name="color_hint" translatable="false">#FF00FF</string>
    <string name="pref_item_routecolor_key" translatable="false">routeColor</string>
    <string name="pref_cat_other_title">Other</string>
    <string name="pref_item_routecolor_title">Route color</string>
    <string name="pref_item_routecolor_summary">Color of the 3d rendered route</string>
    <string name="pref_item_lastfix_key" translatable="false">lastFix</string>
    <string name="pref_item_lastfix_title">Last set/obtained position</string>
    <string name="pref_item_lastdest_default" translatable="false">51.46301,7.00396</string>
    <string name="pref_item_lastfix_default" translatable="false">51.46184,7.01655</string>
    <string name="pref_item_lastdest_key" translatable="false">lastDest</string>
    <string name="pref_item_lastdest_title">Last set destination</string>
	<string name="pref_item_autolocate_key" translatable="false">useLocationServices</string>
	<string name="pref_item_autolocate_title">Auto locate</string>
	<string name="pref_item_autolocate_summary">Use system\'s location services (GPS, WLAN etc.) to obtain current position (instead of setting manually)</string>
	<string name="pref_cat_rendering">Rendering</string>
	<string name="pref_item_camera2_key" translatable="false">useCamera2</string>
	<string name="pref_item_camera2_title">Use Camera2 (if available)</string>
</resources>