<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuitem_route"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/menu_item_route" />
    <item
        android:id="@+id/menuitem_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_item_map" />
    <item
        android:id="@+id/menuitem_markerlist"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_item_list" />
    <item
        android:id="@+id/menuitem_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_item_search" />
    <item
        android:id="@+id/menuitem_range"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/menu_item_range" />
    <item
        android:id="@+id/menuitem_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_settings" />
</menu>